syntax = "proto3";

import "zeus_plan.proto";
import "zeus_meta.proto";

option java_package = "io.github.zeus.rpc";
option java_multiple_files = true;


message RowResult {
    repeated ColumnValue columns = 1;
}

enum StatusCode {
    OK = 0;
    FAILED = 1;
}

message QueryResult {
    StatusCode code = 1;
    repeated RowResult rows = 2;
}


message QueryPlan {
    string plan_id = 1;
    PlanNode root = 2;
}

message QueryRequest {
    QueryPlan plan = 1;
}

// TODO: Remove this message
message Row {
    int32 db_id = 1;
    int32 table_id = 2;
}

service ZeusDataService {
    rpc Query(QueryRequest) returns (QueryResult) {}
}




